--- a/notebooks/CP101T17Q1-2.ipynb
+++ b/notebooks/CP101T17Q1-2.ipynb
@@ -42,7 +42,13 @@
     "\\sum_{S\\in\\{A, B, C, D\\} }  \\sum_k n_{e,k} x_{k,S} \\dot{N}_S \n",
     "&= 0\n",
     "\\end{align*}\n",
-    "where $x_{k,S}$ is the mole fraction of compound $k$ in stream $S$, $n_{e,k}$ is the number of atoms of element $e$ in a molecule of type $k$, and the index $k$ runs over all compounds in the system\n"
+    "where $x_{k,S}$ is the mole fraction of compound $k$ in stream $S$, $n_{e,k}$ is the number of atoms of element $e$ in a molecule of type $k$, and the index $k$ runs over all compounds in the system\n",
+    "\n",
+    "\n",
+    "\n",
+    "To start this problem, we first load all the required information into dictionaries.  The key addition in the approach we take here, is that for each molecule, we include a dictionary that gives the number of atoms present.  \n",
+    "\n",
+    "For each stream we create a dictionary, with information on the flow rate in the system, as well as a dictionary with the composition of each component in the stream.  "
    ]
   },
   {
@@ -115,7 +121,13 @@
    "source": [
     "## Python code\n",
     "\n",
-    "The element balances given above provide four equations which can be solved to determine the four unknowns: $A$, $B$, $C$, and $F_{\\rm H_2O}$.  However, performing the algebra by hand is rather tedious.  Instead, we can use Python to solve these equations.\n"
+    "The element balances given above provide four equations which can be solved to determine the four unknowns: $A$, $B$, $C$, and $F_{\\rm H_2O}$.  However, performing the algebra by hand is rather tedious.  Instead, we can use Python to solve these equations.\n",
+    "\n",
+    "We need to construct a function that returns the error in the balance for each element in the system.  We will call this function `acc`.  There is one equation for each element in the system, and so we see that there is a loop over elements in the system.  \n",
+    "\n",
+    "The first thing that this function does is to unpack the variable $x$ into the stream information required for this problem.  Based on this information, we then set the flow rates of each of the streams, as well as the composition of stream $D$.\n",
+    "\n",
+    "For each element balance we need to loop over all streams in the system, and then for each stream we need to loop over each species in the system.  From this we are able to dermine the net accumulation of the element in the system.  We then append this value onto the list `res`.  When we are finished looping through all the element balances, we then return the list `res` to `fsolve`.\n"
    ]
   },
   {
@@ -165,7 +177,20 @@
     "# solve the equations\n",
     "solution = fsolve(acc, x0)\n",
     "\n",
-    "print(solution)\n"
+    "print(solution)\n",
+    "print(f'A = {solution[0]} mol h^{{-1}}')\n",
+    "print(f'B = {solution[1]} mol h^{{-1}}')\n",
+    "print(f'C = {solution[2]} mol h^{{-1}}')\n",
+    "print(f'F = {solution[3]} mol h^{{-1}}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this notebook we have presented a more general method for solving a species balance problem.  In the following [notebook](./CP101T17Q2.ipynb), we reuse this same basic framework to solve a different species balance problem."
    ]
   },
   {
