--- a/notebooks/CP101T17Q1.ipynb
+++ b/notebooks/CP101T17Q1.ipynb
@@ -112,11 +112,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this notebook, we solved an atom balance problem, which involved solving four simultaneous algebraic equations, using `fsolve`.\n",
+    "\n",
+    "To examine a more elegant and general way to solve this problem, see the next Jupyter notebook either on [binder](https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb) or [colab](https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb)."
+   ]
   }
  ],
  "metadata": {
