--- a/notebooks/CP101T17Q2.ipynb
+++ b/notebooks/CP101T17Q2.ipynb
@@ -62,34 +62,18 @@
     "Hydrogen balance:\n",
     "\\begin{align*}\n",
     "4A - 4(0.099C) + 2(0.099C) + 2(0.049C) + 2(0.148)C &= 0\n",
-    "\\end{align*}"
+    "\\end{align*}\n",
+    "\n",
+    "This approach is tedious, however, so we will try to reuse as much of the Python code we developed in the [previous notebook](./CP101T17Q1-2.ipynb) to solve this problem.\n",
+    "\n",
+    "First, we pack all the information for this problem into dictionaries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N balance:\n",
-      "0.0\n",
-      "N2 N 2\n",
-      "0.0\n",
-      "N2 N 2\n",
-      "-170.0\n",
-      "C balance:\n",
-      "CH3OH C 1\n",
-      "0.0\n",
-      "0.0\n",
-      "CH3OH C 1\n",
-      "CH2O C 1\n",
-      "-19.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = {}\n",
     "data['CH3OH'] = {'C':1, 'H':4, 'O':1}\n",
@@ -116,8 +100,8 @@
     "streamC = {}\n",
     "streamC['dotN'] = -100.0\n",
     "streamC['species'] = {'CH3OH':0.099, \n",
-    "                      'CH2O':0.099, 'H2O':0.148, \n",
-    "                      'O2':0.07,'N2':0.85}\n",
+    "                      'CH2O':0.099, 'HCOOH':0.049, 'H2O':0.148, \n",
+    "                      'O2':0.049,'N2':0.556}\n",
     "\n",
     "stream_list = [streamA, streamB, streamC]\n",
     "\n",
@@ -150,22 +134,14 @@
    "source": [
     "## Python code\n",
     "\n",
-    "The element balances given above provide four equations which can be solved to determine the four unknowns: $A$, $B$, $C$, and $F_{\\rm H_2O}$.  However, performing the algebra by hand is rather tedious.  Instead, we can use Python to solve these equations.\n"
+    "We can use the essentially same function `acc` we developed in the previous notebook, but only with a couple of minor modifications.  First, we note that there are only two independent element balance equations, as two of the balances can be derived from the other two.  So, rather than looping over all elements in the system, we only loop through nitrogen and carbon.  Next, we need to change how we unpack the variable `x` that `fsolve` passes to the function.  In this case, this is just the flow rates of streams $A$ and $B$.  The function is given below:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 19.8        107.59493671]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.optimize import fsolve\n",
     "\n",
@@ -200,15 +176,29 @@
     "# solve the equations\n",
     "solution = fsolve(acc, x0)\n",
     "\n",
-    "print(solution)\n"
+    "print(solution)\n",
+    "print(f'A = {solution[0]} mol h^{{-1}}')\n",
+    "print(f'B = {solution[1]} mol h^{{-1}}')\n",
+    "\n",
+    "A = solution[0]\n",
+    "B = solution[1]\n",
+    "print(f'feed air to feed methanol ratio = {B/A:.2f}')\n",
+    "\n",
+    "CH3OH_reacted = A*streamA['species']['CH3OH']+streamC['dotN']*streamC['species']['CH3OH']\n",
+    "HCOOH = -streamC['dotN']*streamC['species']['HCOOH']\n",
+    "\n",
+    "\n",
+    "print(f'percentage of formaldehyde lost = {HCOOH/CH3OH_reacted*100.0:.2f}%')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this notebook, we demonstrated that we could reuse much of the code developed for a different species balance problem to solve this problem.  "
+   ]
   }
  ],
  "metadata": {
