--- a/notebooks/python_solver.ipynb
+++ b/notebooks/python_solver.ipynb
@@ -268,8 +268,8 @@
     "For more information on `fsolve`, consult the `scipy` reference [page](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.fsolve.html).\n",
     "\n",
     "Examples of using `bisect` and `fsolve` to solve CP101 problems can be found at the links below:\n",
-    "- CP101: Tutorial 17, Question 1: [binder](https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb) or [colab](https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb)\n",
-    "- CP101: Tutorial 17, Question 1, alternate solution: [binder](https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb) or [colab](https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb)\n",
+    "- CP101: Tutorial 17, Question 1: [notebook](./CP101T17Q1.ipynb)\n",
+    "- CP101: Tutorial 17, Question 1, alternate solution: [notebook](./CP101T17Q1-2.ipynb)\n",
     "- CP101: Tutorial 17, Question 2: [notebook](./CP101T17Q2.ipynb)\n",
     "- CP101: Example 7.5: [notebook](./CP101E7.5.ipynb)\n"
    ]
