--- a/notebooks/python_conditionals.ipynb
+++ b/notebooks/python_conditionals.ipynb
@@ -38,21 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 < 2 ?  True\n",
-      "2 < 2 ?  False\n",
-      "2 <= 2 ?  True\n",
-      "1 = 2 ?  False\n",
-      "1 > 2 ?  False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('1 < 2 ? ', 1<2)\n",
     "print('2 < 2 ? ', 2<2)\n",
@@ -72,19 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 < 3 <= 10 True\n",
-      "10 > 3 > 1 True\n",
-      "10 > 13 > 1 False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('0 < 3 <= 10', 0<3<=10)\n",
     "print('10 > 3 > 1', 10>3>1)\n",
@@ -104,20 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F and F =  False\n",
-      "F and T =  False\n",
-      "T and F =  False\n",
-      "T and T =  True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('F and F = ', False and False)\n",
     "print('F and T = ', False and True)\n",
@@ -134,20 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F or F =  False\n",
-      "F or T =  True\n",
-      "T or F =  True\n",
-      "T or T =  True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('F or F = ', False or False)\n",
     "print('F or T = ', False or True)\n",
@@ -164,20 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(True and False) or True"
    ]
@@ -227,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,19 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cp at 100ºC = 29.1 J/mol/K\n",
-      "Cp at 1000ºC = 32.7 J/mol/K\n",
-      "Cp at 3000ºC = 37.0 J/mol/K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for T in [100, 1000, 3000]:\n",
     "    print(f'Cp at {T}ºC = {get_Cp(T):.1f} J/mol/K')"
@@ -299,7 +234,7 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "In this notebook we've had a look at making decisions in Python. [Next time](python_imports.ipynb), we'll look at using functions and objects ***imported from modules*** - this means using code other very clever peopple have written so you don't need to!"
+    "In this notebook we've had a look at making decisions in Python. [Next time](python_numpy.ipynb), we'll look at using functions and objects ***imported from modules*** - this means using code other very clever peopple have written so you don't need to!"
    ]
   }
  ],
@@ -319,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
