--- a/notebooks/python_functions.ipynb
+++ b/notebooks/python_functions.ipynb
@@ -6,14 +6,137 @@
    "source": [
     "# Python Functions\n",
     "\n",
-    "From maths, you know what a function is. A function is an operation, a task, a *thing* done on *data*. In a programming sense, a function is a collection of statements that can be re-performed by 'calling' the function by name, like when we used the print function earlier.\n",
+    "In mathematics, we learned that a function is a map between one set of\n",
+    "elements, known as the domain, to another set of elements, known as\n",
+    "the range.  Some examples of functions we are familiar with are\n",
+    "polynomials and trigometric functions (e.g., sin and cos).  In the\n",
+    "case of the cos function, the domain is the set of real numbers and\n",
+    "the range is the set of real numbers in the interval between $-1$ and\n",
+    "$+1$.\n",
+    "\n",
+    "Python also has the notion of a function.  We can construct a function\n",
+    "using the `def` command.  As an example, let's create a function that\n",
+    "takes a number as input and returns the square of the number:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(x):\n",
+    "    y = x**2\n",
+    "    return y\n",
+    "\n",
+    "print(func(4.0))\n",
+    "\n",
+    "\n",
+    "z = 7\n",
+    "square = func(z)\n",
+    "print(square)\n",
+    "\n",
+    "\n",
+    "y = 2\n",
+    "print(func(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `def` command defines a function called `func`, which takes a single argument, and then returns the square of that argument, given by the `return` statement.  All the statements that are part of the function must be consistently indented in from the `def` statement.  In order to invoke the function, we just write its name, followed by a set of parentheses that enclose its argument(s).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable scope\n",
+    "\n",
+    "The \"scope\" of a variable is the domain in which it applies.  Variables that are \"defined\" within a function are not directly accessible from outside the function.  Even though the variables may have the same name, they are actually distinct.  This can be seen in the final two statements of the above code block.  In the \"main code\", the value of the variable `y` is 2; however, the value of the variable `y` in the function is $2^2=4$, which is the value returned by the function and printed out.  \n",
+    "\n",
+    "To illustrate this a bit more clearly, see the code below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 1.0\n",
+    "print(f'The value of x is {x} in the main code')\n",
+    "\n",
+    "def print_me():\n",
+    "\n",
+    "    x = 17.0\n",
+    "    print(f'The value of x is {x} inside the function')\n",
+    "    \n",
+    "\n",
+    "x = 2.0\n",
+    "print(f'The value of x is {x} in the main code')    \n",
+    "    \n",
+    "    \n",
+    "print_me()    \n",
+    "    \n",
+    "x = 5.0\n",
+    "print(f'The value of x is {x} in the main code')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we see that the variable `x` outside the function is distinct from the variable `x` inside the function.\n",
+    "\n",
+    "A final point which might be slightly confusing is that if a variable is not defined (i.e. assigned) inside a function, then it is the same as outside the code block."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 1.0\n",
+    "y = 'hello'\n",
+    "print(f'The value of x is {x} in the main code')\n",
+    "print(f'The value of y is {y} in the main code')\n",
+    "\n",
+    "def print_me():\n",
+    "\n",
+    "    x = 17.0\n",
+    "    print(f'The value of x is {x} inside the function')\n",
+    "    print(f'The value of y is {y} inside the function')\n",
+    "    \n",
+    "\n",
+    "x = 2.0\n",
+    "y = 'good-bye'\n",
+    "print(f'The value of x is {x} in the main code')\n",
+    "print(f'The value of y is {y} in the main code')\n",
+    "    \n",
+    "    \n",
+    "print_me()    \n",
+    "    \n",
+    "x = 5.0\n",
+    "y = 'hello again'\n",
+    "print(f'The value of x is {x} in the main code')\n",
+    "print(f'The value of y is {y} in the main code')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More specifics on functions\n",
     "\n",
     "In Python, we create a function as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,20 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 4\n",
-      "5 6 7 8\n",
-      "a b b d\n",
-      "A B C D\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "foo(1, 2)\n",
     "foo(5, 6, 7, 8)\n",
@@ -73,17 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def long_calc(a, b, c):\n",
     "    return a + b - c\n",
@@ -95,7 +199,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can apply this new knowledge to the familiar example 2.6."
+    "Finally, we note that we can return multiple values from a function by just separating them by commas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def long_calc2(a, b, c):\n",
+    "    return a + b - c, a + b + c\n",
+    "\n",
+    "out1, out2 = long_calc2(21, 9, 10)\n",
+    "print(out1, out2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can apply this new knowledge to the familiar example 2.6 from CP101."
    ]
   },
   {
@@ -129,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,17 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'O2': {'wt': 16.0, 'Mw': 32.0}, 'CO': {'wt': 4.0, 'Mw': 28.0}, 'CO2': {'wt': 14.0, 'Mw': 44.0}, 'N2': {'wt': 63.0, 'Mw': 28.0}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = {}\n",
     "\n",
@@ -238,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,17 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[15.571284125379172, 4.4489383215369065, 9.908998988877654, 70.07077856420628]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mol_percs = wf_to_mf(weight_fractions, molecular_weights)\n",
     "print(mol_percs)"
@@ -280,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,20 +417,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mol% O2 = 15.57%\n",
-      "mol% CO = 4.45%\n",
-      "mol% CO2 = 9.91%\n",
-      "mol% N2 = 70.07%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = wf_to_mf_from_data(data)\n",
     "\n",
@@ -349,20 +446,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mol% O2 = 27.13%\n",
-      "mol% CO = 4.43%\n",
-      "mol% CO2 = 11.98%\n",
-      "mol% N2 = 56.47%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = {}\n",
     "\n",
@@ -401,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
