--- a/tutorials/week2.ipynb
+++ b/tutorials/week2.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "## Question 3\n",
     "\n",
-    "A brine solution (i.e.\\ a mixture of salt and water) with a salt\n",
+    "A brine solution (i.e. a mixture of salt and water) with a salt\n",
     "concentration of $0.1\\,{\\rm kg\\,L}^{-1}$ begins to flow at a constant\n",
     "rate of $6\\,{\\rm L\\,min}^{-1}$ into a large tank that initially holds\n",
     "$1000\\,{\\rm L}$ of pure water.  The solution inside the tank is kept\n",
@@ -116,7 +116,7 @@
    "source": [
     "## Question 4\n",
     "\n",
-    "Evaluate the integrals:\n",
+    "Evaluate the following integrals analytically (possibly with help from an integral table) and using sympy:\n",
     "\n",
     "1. $\\displaystyle\n",
     "\\int_a^b dx\\, \\varepsilon x    \n",
