--- a/tutorials/week4.ipynb
+++ b/tutorials/week4.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "## Question 3\n",
     "\n",
-    "Evaluate the following integrals:\n",
+    "Evaluate the following integrals analytically (possibly with help from an integral table) and using sympy:\n",
     "\n",
     "1. $\\displaystyle\n",
     "\\int \\frac{dx}{\\sqrt{2-3x}}  \n",
