--- a/tutorials/week3.ipynb
+++ b/tutorials/week3.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "## Question 3\n",
     "\n",
-    "Evaluate the following integrals:\n",
+    "Evaluate the following integrals analytically (possibly with help from an integral table) and using sympy:\n",
     "\n",
     "1. $\\displaystyle\n",
     "\\int \\frac{dx}{x^2 + 16}  \n",
@@ -132,6 +132,353 @@
     "7. $\\displaystyle\n",
     "\\int dx\\,\\frac{x}{\\sqrt{3x+4}}\n",
     "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 4\n",
+    "\n",
+    "Consider the gas-water shift reaction\n",
+    "\\begin{align*}\n",
+    "{\\rm \n",
+    "CO(g) + H_2O(g) \\leftrightarrows CO_2(g) + H_2(g)\n",
+    "}\n",
+    "\\end{align*}\n",
+    "\n",
+    "| gas       | $M_w$        | $H_f$         | $G_f$         |\n",
+    "| :--       | --:        | --:           | --:           |\n",
+    "|           | g mol$^{-1}$ | kJ mol$^{-1}$ | kJ mol$^{-1}$ |\n",
+    "| CO(g)     | $28.01$    | $ -110.5$     | $ -137.2$     |\n",
+    "| CO$_2$(g) | $44.01$    | $ -393.3$     | $ -394.6$     |\n",
+    "| H$_2$(g)  | $ 2.02$    | $    0.0$     | $    0.0$     |\n",
+    "| H$_2$O(g) | $18.02$    | $ -241.8$     | $ -228.4$     |\n",
+    "|           |            |               |               |\n",
+    "\n",
+    "\n",
+    "The heat capacity of the gases can be described by the equation\n",
+    "\\begin{align*}\n",
+    "\\frac{C_p}{R}\n",
+    "&= a_0 + a_1 T + a_2 T^2 + a_3 T^3 + a_4 T^4\n",
+    "\\end{align*}\n",
+    "where $T$ is the absolute temperature in kelvin,\n",
+    "$R=8.314$\\,J$^{-1}$\\,mol\\,K$^{-1}$ is the ideal gas constant, and the\n",
+    "coefficients $a_k$ are given in the table below.\n",
+    "\n",
+    "\n",
+    "| gas       | $a_0$   | $a_1\\times10^3$ | $a_2\\times10^5$ | $a_3\\times10^8$ | $a_4\\times10^{11}$ |\n",
+    "| :--       | --:     | --:             | --:             | --:             | --:                |\n",
+    "|           |         | K$^{-1}$        | K$^{-2}$        | K$^{-3}$        |  K$^{-4}$                   |\n",
+    "| CO(g)     | $3.912$ | $ -3.913$| $1.182$  | $ -1.302$       | $  0.515$          |\n",
+    "| CO$_2$(g) | $3.259$ | $  1.356$| $1.502$  | $ -2.374$       | $  1.056$          |\n",
+    "| H$_2$(g)  | $2.883$ | $  3.681$| $-0.772$ | $  0.692$       | $ -0.213$          |\n",
+    "| H$_2$O(g) | $4.395$ | $ -4.186$| $1.405$ | $ -1.564$       | $  0.632$          |\n",
+    "\n",
+    "\n",
+    "The information in both tables have been summarized in the dictionary `data`.  The stoichiometric coefficients (the stoichiometric coefficient for species $k$ is typically denoted by the symbol $\\nu_k$) of the reaction are held in the dictionary `nu`.  Note that product species have a positive stoichiometric coefficient, and reactant species have a negative stoichiometric coefficient.\n",
+    "\n",
+    "In what follows below, assume that the mixtures behave as an ideal gas.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = 8.314e-3  # ideal gas constant / kJ mol^{-1} K^{-1}\n",
+    "T0 = 298.15   # reference temperature / K\n",
+    "p0 = 1.0e5    # reference pressure / Pa\n",
+    "\n",
+    "\n",
+    "data = {}\n",
+    "data['CO']  = {'Mw':28.01, 'Hf':-110.5, 'Gf':-137.2 }\n",
+    "data['CO2'] = {'Mw':44.01, 'Hf':-393.3, 'Gf':-394.6 }\n",
+    "data['H2']  = {'Mw': 2.02, 'Hf':   0.0, 'Gf':   0.0 }\n",
+    "data['H2O'] = {'Mw':18.02, 'Hf':-241.8, 'Gf':-228.4 }\n",
+    "\n",
+    "data['CO'] ['Cp_coeff'] = [3.912, -3.913e-3,  1.182e-5, -1.302e-8,  0.515e-11]      \n",
+    "data['CO2']['Cp_coeff'] = [3.259,  1.356e-3,  1.502e-5, -2.374e-8,  1.056e-11]      \n",
+    "data['H2'] ['Cp_coeff'] = [2.883,  3.681e-3, -0.772e-5,  0.692e-8, -0.213e-11]      \n",
+    "data['H2O']['Cp_coeff'] = [4.395, -4.186e-3,  1.405e-5, -1.564e-8,  0.632e-11]\n",
+    "\n",
+    "nu = {}\n",
+    "nu['CO']  = -1.0\n",
+    "nu['CO2'] =  1.0 \n",
+    "nu['H2']  =  1.0\n",
+    "nu['H2O'] = -1.0\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1: Gibbs energy\n",
+    "\n",
+    "As you will learn later in thermodynamics, the enthalpy can be written in terms of the Gibbs energy through the Gibbs-Helmholtz equation:\n",
+    "\\begin{align*}\n",
+    "H = \\frac{\\partial(G/T)}{\\partial(1/T)}\n",
+    "\\end{align*}\n",
+    "By integrating this relation, we find that the Gibbs energy can be determined from the enthalpy:\n",
+    "\\begin{align*}\n",
+    "\\frac{G(T)}{RT}\n",
+    "&= \\frac{G(T_0)}{RT_0}\n",
+    "- \\int_{T_0}^{T} dT'\\, \\frac{H(T')}{RT'^2} \n",
+    "\\end{align*}\n",
+    "where $T_0$ is a reference temperature typically taken as $298.15\\,{\\rm K}$.\n",
+    "\n",
+    "This relation allows the calculation of the Gibbs energy of formation of a substance $k$ at any temperature, given its value at a reference temperature $T_0$:\n",
+    "\\begin{align*}\n",
+    "\\frac{G_{f,k}(T)}{RT}\n",
+    "&= \\frac{G_{f,k}(T_0)}{RT_0}\n",
+    "- \\int_{T_0}^{T} dT'\\, \\frac{H(T')}{RT'^2} \n",
+    ".\n",
+    "\\end{align*}\n",
+    "The Gibbs energy of formation of a mixture $G_f(T)$ is given by\n",
+    "\\begin{align*}\n",
+    "G_f(T)\n",
+    "&= \\sum_k N_k G_{f,t}\n",
+    "\\end{align*}\n",
+    "where $N_k$ is the number of moles of species $k$ in the system.\n",
+    "\n",
+    "**Task:**\n",
+    "frCreate a function that will return the Gibbs energy of formation for a mixture, given the temperature and mole numbers of the system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def get_Gf(T, moles):\n",
+    "    \n",
+    "    # TODO <--- your work here\n",
+    "    \n",
+    "\n",
+    "mole0 = {}\n",
+    "mole0['CO']  = 1.0\n",
+    "mole0['CO2'] = 1.0 \n",
+    "mole0['H2']  = 0.5\n",
+    "mole0['H2O'] = 0.5\n",
+    "\n",
+    "\n",
+    "print(get_Gf(298.15, mole0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2: Equilibrium constant\n",
+    "\n",
+    "The condition for equilibrium is\n",
+    "\\begin{align*}\n",
+    "\\Pi_k \\left(\\frac{p_k}{p_0}\\right)^{\\nu_k} \n",
+    "&= K(T)\n",
+    "\\end{align*}\n",
+    "where $p_k$ is the partial pressure of species $k$, $p_0$ is a reference pressure, typically taken to be $1\\,{\\rm bar}$, and $K(T)$ is the equilibrium constant, given by \n",
+    "\\begin{align*}\n",
+    "\\ln K(T) = - \\frac{\\Delta G_{\\rm rxn}(T)}{RT}\n",
+    ",\n",
+    "\\end{align*}\n",
+    "where $R=8.314\\,{\\rm J\\,mol^{-1}\\,K^{-1}}$ is the gas constant, and \n",
+    "$\\Delta G_{\\rm rxn}(T)$ is the Gibbs energy of reaction is defined as:\n",
+    "\\begin{align*}\n",
+    "\\Delta G_{\\rm rxn}(T)\n",
+    "&= \\sum_k \\nu_k G_{f,k}(T)\n",
+    "\\end{align*}\n",
+    "where $G_{f,k}(T)$ is the Gibbs energy of formation at temperature $T$.\n",
+    "\n",
+    "\n",
+    "**Task:**\n",
+    "Create a function that takes the temperature and stoichiometric coefficients of a reaction as input and returns the logarithm of the equilibrium constant.  Plot the value of the equilibrium constant as a function of temperature.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_lnK(T, nu):\n",
+    "    \n",
+    "    # TODO <--- your work here\n",
+    "\n",
+    "\n",
+    "\n",
+    "lnK = get_lnK(298.15, nu)\n",
+    "print(lnK)\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import pylab as plt\n",
+    "\n",
+    "T_data = np.arange(200.0, 500.0)\n",
+    "\n",
+    "\n",
+    "lnK_data = [get_lnK(T, nu) for T in T_data]\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.plot(T_data, lnK_data)\n",
+    "\n",
+    "plt.xlabel('temperature / K')\n",
+    "plt.ylabel(r'$\\ln K$')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 3: Chemical reaction equilibrium\n",
+    "\n",
+    "Using mole fractions in the condition for equilibrium, we find\n",
+    "\\begin{align*}\n",
+    "\\Pi_k \\left( x_k \\frac{p_k}{p_0}\\right)^{\\nu_k} \n",
+    "&= K(T)\n",
+    "\\end{align*}\n",
+    "Taking the log of both sides of the equation, \n",
+    "\\begin{align*}\n",
+    "\\sum_k {\\nu_k}\\ln x_k\n",
+    "+ \\nu\\ln\\left(\\frac{p}{p_0}\\right)\n",
+    "&= \\ln K(T)\n",
+    "\\end{align*}\n",
+    "where $\\nu=\\sum_k \\nu_k$.\n",
+    "\n",
+    "To solve the equation using Python, we need to put it in a form $f(x)=0$:\n",
+    "\\begin{align*}\n",
+    "\\sum_k {\\nu_k}\\ln x_k\n",
+    "+ \\nu\\ln\\left(\\frac{p}{p_0}\\right)\n",
+    "- \\ln K(T)\n",
+    "&= 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "**Task:**\n",
+    "Use the function `bisect` from scipy.optimize to solve for the conversion $\\alpha$, given the initial moles in the system.  This has the advantage of giving bounds to the value of the solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mole0 = {}\n",
+    "mole0['CO']  = 1.0\n",
+    "mole0['CO2'] = 1.0 \n",
+    "mole0['H2']  = 0.5\n",
+    "mole0['H2O'] = 0.5\n",
+    "\n",
+    "\n",
+    "\n",
+    "lnK = get_lnK(T0, nu)\n",
+    "print(lnK)\n",
+    "\n",
+    "p = 1.0e5\n",
+    "\n",
+    "def residual(alpha, mole0, p, lnK):\n",
+    "\n",
+    "    # TODO <--- your work here\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pylab as plt\n",
+    "#alpha_data = np.arange(0.001, 1.0, 0.001)\n",
+    "#y_data = [residual(alpha, mole0, p, lnK) for alpha in alpha_data]\n",
+    "#plt.plot(alpha_data, y_data)\n",
+    "#plt.show()\n",
+    "\n",
+    "\n",
+    "from scipy.optimize import fsolve\n",
+    "from scipy.optimize import bisect\n",
+    "\n",
+    "\n",
+    "\n",
+    "# TODO <--- your work here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Task:**\n",
+    "Plot the  reaction extent as a function of temperature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_data = np.arange(300.0, 500.0, 10.0)\n",
+    "\n",
+    "from scipy.optimize import fsolve\n",
+    "from scipy.optimize import bisect\n",
+    "\n",
+    "alpha_data = []\n",
+    "for T in T_data:\n",
+    "    lnK= get_lnK(T, nu)\n",
+    "    # TODO <--- your work here\n",
+    "\n",
+    "plt.plot(T_data, alpha_data)\n",
+    "\n",
+    "plt.xlabel('temperature / K')\n",
+    "plt.ylabel(r'$\\alpha$ / mol')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task:** Plot the variation of the mole fractions of the component as a function of temperature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_data = np.arange(300.0, 500.0, 10.0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for T in T_data:\n",
+    "    lnK= get_lnK(T, nu)\n",
+    "    # TODO <--- your work here\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.xlabel('temperature / K')\n",
+    "plt.ylabel('mole fraction')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
