--- a/notebooks/CP101T17Q1.ipynb
+++ b/notebooks/CP101T17Q1.ipynb
@@ -73,9 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  5.18156425   3.8547486  105.30726257  15.22905028]\n",
+      "A = 5.181564245810032 mol h^{-1}\n",
+      "B = 3.854748603351975 mol h^{-1}\n",
+      "C = 105.3072625698324 mol h^{-1}\n",
+      "F_H2O = 15.229050279329607 mol h^{-1}\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.optimize import fsolve\n",
     "\n",
