changing title to week1-soln.ipynb

--- a/tutorials/week1-soln.ipynb
+++ b/tutorials/week1-soln.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CP213: Tutorial Notebook Week 1\n",
+    "# CP213: Model Solutions for Tutorial Notebook 1\n",
     "\n"
    ]
   },
