minor correction to solutions for tutorial 3

--- a/tutorials/tutorial3-soln.ipynb
+++ b/tutorials/tutorial3-soln.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CP213: Model Solutions for Tutorial Worksheek 3"
+    "# CP213: Model Solutions for Tutorial 3"
    ]
   },
   {
