correction to problem statement in tutorial 5

--- a/tutorials/tutorial5.ipynb
+++ b/tutorials/tutorial5.ipynb
@@ -38,7 +38,7 @@
     "## Question 2\n",
     "\n",
     "A cylindrical tank of diameter $D=1.5\\,{\\rm m}$ is being filled with\n",
-    "water at a rate of $\\dot{V}=1\\,{\\rm L\\,min^{-1}}$.  In addition,\n",
+    "water at a rate of $\\dot{V}=1000\\,{\\rm L\\,min^{-1}}$.  In addition,\n",
     "water exits the tank through an outlet with cross-sectional area\n",
     "$A_0=25\\,{\\rm cm}^2$ with a velocity $v=\\sqrt{2gh}$, where $h$ is the\n",
     "height of the liquid above the outlet and $g=9.81\\,{\\rm m\\,s^{-2}}$ is\n",
@@ -101,7 +101,7 @@
     "  $\\displaystyle\n",
     "  xy^3\\frac{dy}{dx} = (1+x^2)(1+y^2)  \n",
     "  $\n",
-    "  where $y(1)=1$.  Plot a comparison between your analytical solution and a numerical solution obtaned by the \"odeint\" function in scipy.integrate.\n",
+    "  where $y(1)=1$.  Plot a comparison between your analytical solution and a numerical solution.\n",
     "  \n",
     "  "
    ]
