cleaning up tutorial 7

--- a/tutorials/week7.ipynb
+++ b/tutorials/week7.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CP213: Tutorial Notebook Week 7\n",
+    "# CP213: Tutorial Notebook 7\n",
     "\n"
    ]
   },
@@ -22,16 +22,16 @@
    "metadata": {},
    "source": [
     "A bottle rocket is constructed using a two liter soft drink bottle\n",
-    "half filled with water and pressurized with air to $2\\,{\\rm barg}$.\n",
+    "half filled with water and pressurized with air to $2\\,{\\rm barg}$ (see [Awesome homemade AIR POWERED bottle rocket](https://www.youtube.com/watch?v=R625vwA4jpQ)).\n",
     "How does the thrust vary with time?  How many of these bottle rockets\n",
     "are required to lift a person off the ground?  Note that the force\n",
     "exerted by the ejected water is $F = \\dot{m} v$, where $v$ is the exit\n",
     "velocity of water, and $\\dot{m}$ is the mass flowrate of the water.\n",
     "The exit velocity $v$ of the water can be calculated by\n",
     "\\begin{equation*}\n",
-    "  v = C_d\\sqrt{2\\Delta p/\\rho}\n",
+    "  v = K\\sqrt{2\\Delta p/\\rho}\n",
     "\\end{equation*}\n",
-    "where $C_d\\approx0.98$ is the discharge coefficient, $\\Delta p$ is the\n",
+    "where $K\\approx0.98$ is the discharge coefficient, $\\Delta p$ is the\n",
     "pressure difference between the inside and outside of the bottle, and\n",
     "$\\rho=1000\\,{\\rm kg\\,m^{-3}}$ is the density of water.\n",
     "\n",
@@ -45,7 +45,6 @@
     "    p V = {\\rm constant} \n",
     "\\end{equation*}\n",
     "where $V$ is the total volume occupied by the air in the bottle.\n",
-    "%, and $\\gamma=1.4$ is the heat capacity ratio of air.\n",
     "\n",
     "Qualitatively describe the operation of the rocket.  What is the\n",
     "purpose of putting water in the rocket (instead of just using\n",
@@ -57,7 +56,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 2"
+    "## Question 2\n",
+    "\n",
+    "A pollutant species is found to undergo a first order decomposition\n",
+    "reaction, where the rate of decay of its concentration $c$ is\n",
+    "proportional\n",
+    "\\begin{align*}\n",
+    "  \\frac{dc}{dt} = - k c\n",
+    "\\end{align*}\n",
+    "where $k$ is a rate constant that has the units of inverse time.\n",
+    "Experimental measurements on the system are given in the table below:\n",
+    "\n",
+    "    \n",
+    "|  $t / {\\rm s}$ |$0     $|$ 10    $|$ 20    $|$ 30    $|$ 40$    |\n",
+    "| :-- | --: | --: | --: | --: | --: |\n",
+    "|  $c / {\\rm M}$ |$0.167 $|$ 0.126 $|$ 0.095 $|$ 0.072 $|$ 0.054$ |\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. Determine how the concentration of the pollutant species is expected to vary with time (i.e. find the function $c(t)$).  Assume that the concentration of the species at time $t=0$ is $c_0$.\n",
+    "\n",
+    "2. Graph the experimental data in the table above in a form to\n",
+    "  obtain a linear relation that can be used to obtain an estimate for\n",
+    "  $k$ (Hint: Use a semilog plot).\n",
+    "  \n",
+    "3. A $0.2\\,{\\rm M}$ solution is fed to a tubular reactor of inner\n",
+    "  radius $R=1\\,{\\rm mm}$ and length $L=1\\,{\\rm m}$.  The velocity profile\n",
+    "  within the reactor is given by\n",
+    "  \\begin{align*}\n",
+    "    v(r) &= 2v_0\\left(1-\\frac{r^2}{R^2}\\right)\n",
+    "  \\end{align*}\n",
+    "  where $r$ is the distance from the center-line of the tube, and\n",
+    "  $v_0=1\\,{\\rm cm\\,s}^{-1}$.  Determine the (mean) concentration of\n",
+    "  the solution that exits the reactor.  (Hint: First determine the\n",
+    "  concentration profile across the cross-section of the exiting plane\n",
+    "  of the reactor and then use the trapezoid rule to estimate the\n",
+    "  average).\n",
+    "  \n",
+    "\n",
+    "  "
    ]
   },
   {
@@ -94,7 +131,7 @@
     "  $\\displaystyle\n",
     "\\frac{dy}{dx} = \\frac{2y}{x} + \\frac{x}{y}\n",
     "  $\n",
-    "  where $y(1)=2$.  Plot a comparison between your analytical solution and a numerical solution obtaned by the \"odeint\" function in scipy.integrate.\n"
+    "  where $y(1)=2$.  Plot a comparison between your analytical solution and a numerical solution.\n"
    ]
   },
   {
