fixing solutions for tutorial 7

--- a/tutorials/tutorial7-soln.ipynb
+++ b/tutorials/tutorial7-soln.ipynb
@@ -678,28 +678,190 @@
    "source": [
     "## Model solution for Q3\n",
     "\n",
-    "### Part 1:"
+    "All these equations are \"homogeneous\" first order differential equations, which are of the general form\n",
+    "\\begin{align*}\n",
+    "\\frac{dy}{dx} &= f\\left(\\frac{y}{x}\\right)\n",
+    "\\end{align*}\n",
+    "The method to solve these is to make the substitution:\n",
+    "\\begin{align*}\n",
+    "v(x) &= \\frac{y(x)}{x},\n",
+    "\\end{align*}\n",
+    "which implies \n",
+    "\\begin{align*}\n",
+    "y(x) &= \n",
+    "\\\\\n",
+    "\\frac{dy}{dx} &= v(x) + x\\frac{dv}{dx}.\n",
+    "\\end{align*}\n",
+    "This then leads to\n",
+    "\\begin{align*}\n",
+    "v(x) + x\\frac{dv}{dx} &= f(v)\n",
+    "\\\\\n",
+    "\\frac{1}{f(v)-v} \\frac{dv}{dx} &= \\frac{1}{x}\n",
+    "\\end{align*}\n",
+    "which is separable:\n",
+    "\\begin{align*}\n",
+    "\\frac{dv}{f(v)-v} &= \\frac{dx}{x}\n",
+    ".\n",
+    "\\end{align*}\n",
+    "\n",
+    "### Part 1:\n",
+    "\n",
+    "In this case, we find\n",
+    "\\begin{align*}\n",
+    "f(v) &= v + \\tan v\n",
+    "\\\\\n",
+    "f(v) - v &= \\tan v\n",
+    "\\end{align*}\n",
+    "We then need to integrate\n",
+    "\\begin{align*}\n",
+    "\\frac{dv}{\\tan v} &= \\frac{dx}{x}\n",
+    "\\\\\n",
+    "\\ln |\\sin v| &= \\ln |x| + C\n",
+    "\\\\\n",
+    "\\ln \\left|\\sin\\frac{y(x)}{x}\\right| &= \\ln|x| + C\n",
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2:"
+    "### Part 2:\n",
+    "\n",
+    "In this case, we find\n",
+    "\\begin{align*}\n",
+    "f(v) &= \\frac{1+v}{1-v}\n",
+    "\\\\\n",
+    "f(v) - v &= \\frac{1+v}{1-v} - v \n",
+    "= \\frac{1+v - (1-v)v}{1-v}\n",
+    "= \\frac{1-v^2}{1-v} = 1+v\n",
+    "\\end{align*}\n",
+    "We then need to integrate\n",
+    "\\begin{align*}\n",
+    "\\frac{dv}{1+v} &= \\frac{dx}{x}\n",
+    "\\\\\n",
+    "\\ln |1+v| &= \\ln |x| + C\n",
+    "\\\\\n",
+    "\\ln \\left|1+\\frac{y(x)}{x}\\right| &= \\ln|x| + C\n",
+    "\\\\\n",
+    "\\left|1+\\frac{y(x)}{x}\\right| &= |x| e^C\n",
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 3:"
+    "### Part 3:\n",
+    "\n",
+    "In this case, we find\n",
+    "\\begin{align*}\n",
+    "f(v) &= v + \\frac{v(1+v)}{1-v}\n",
+    "\\\\\n",
+    "f(v) - v &= \\frac{v(1+v)}{1-v} -v\n",
+    "=  \\frac{v(1+v)-v(1-v)}{1-v}\n",
+    "= \\frac{2v^2}{1-v}\n",
+    "\\end{align*}\n",
+    "We then need to integrate\n",
+    "\\begin{align*}\n",
+    "(1-v)\\frac{dv}{2v^2} &= \\frac{dx}{x}\n",
+    "\\\\\n",
+    "\\frac{1}{2}(-v^{-1} - \\ln|v|) &= \\ln |x| + C\n",
+    "\\\\\n",
+    "-\\frac{x}{y} - \\ln \\left|y(x)\\right| &=  C\n",
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 4:"
+    "### Part 4:\n",
+    "\n",
+    "In this case, we find\n",
+    "\\begin{align*}\n",
+    "f(v) &= 2v + v^{-1}\n",
+    "\\\\\n",
+    "f(v) - v &= v + v^{-1}\n",
+    "\\end{align*}\n",
+    "We then need to integrate\n",
+    "\\begin{align*}\n",
+    "\\frac{dv}{v+v^{-1}} &= \\frac{dx}{x}\n",
+    "\\\\\n",
+    "\\frac{vdv}{v^2+1} &= \\frac{dx}{x}\n",
+    "\\\\\n",
+    "\\frac{1}{2}\\ln |v^2+1| &= \\ln |x| + C\n",
+    "\\\\\n",
+    "\\frac{1}{2}\\ln \\left|(y/x)^2+1\\right| &= \\ln|x| + C\n",
+    "\\end{align*}\n",
+    "Using the initial condition $y(1)=2$, we find\n",
+    "\\begin{align*}\n",
+    "\\frac{1}{2}\\ln \\left|(2/1)^2+1\\right| &= \\ln|1| + C\n",
+    "\\\\\n",
+    "C &= \\frac{1}{2}\\ln 5 .\n",
+    "\\end{align*}\n",
+    "Finally, we get\n",
+    "\\begin{align*}\n",
+    "\\frac{1}{2}\\ln \\left|(y/x)^2+1\\right| &= \\ln|x| + \\frac{1}{2}\\ln 5\n",
+    "\\\\\n",
+    "\\ln \\left|(y/x)^2+1\\right| &= 2\\ln|x| + \\ln 5\n",
+    "\\\\\n",
+    "(y/x)^2 + 1 &= 5 x^2\n",
+    "\\\\\n",
+    "y(x) &= x(5x^2-1)^{1/2}.\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pylab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-226df9a1d9ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpylab\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pylab'"
+     ]
+    }
+   ],
+   "source": [
+    "x_data = [1.0]\n",
+    "y_data = [2.0]\n",
+    "\n",
+    "\n",
+    "dx = 0.01\n",
+    "xmax = 5.0\n",
+    "nsteps = int((xmax-1.0)/dx)\n",
+    "\n",
+    "xold = 1.0\n",
+    "yold = 1.0\n",
+    "for step in range(nsteps):\n",
+    "    xnew = xold + dx\n",
+    "    ynew = yold + (2*yold/xold+xold/yold)*dx\n",
+    "    x_data.append(xnew)\n",
+    "    y_data.append(ynew)\n",
+    "    xold = xnew\n",
+    "    yold = ynew\n",
+    "\n",
+    "    \n",
+    "import pylab as plt\n",
+    "\n",
+    "\n",
+    "plt.plot(x_data, y_data, 'o', label='numerical')\n",
+    "\n",
+    "y_analytical = [x*np.sqrt(5*x*x-1) for x in x_data]\n",
+    "plt.plot(x_analytical, y_analytical, label='analytical')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.xlabel(r'$x$')\n",
+    "plt.ylabel(r'$y$')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -733,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
