fixing solutions for tutorial 7

--- a/tutorials/tutorial7-soln.ipynb
+++ b/tutorials/tutorial7-soln.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -824,14 +824,15 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-226df9a1d9ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpylab\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-b3340ec2debc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpylab\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pylab'"
      ]
     }
    ],
    "source": [
-    "x_data = [1.0]\n",
-    "y_data = [2.0]\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "dx = 0.01\n",
@@ -839,7 +840,9 @@
     "nsteps = int((xmax-1.0)/dx)\n",
     "\n",
     "xold = 1.0\n",
-    "yold = 1.0\n",
+    "yold = 2.0\n",
+    "x_data = [xold]\n",
+    "y_data = [yold]\n",
     "for step in range(nsteps):\n",
     "    xnew = xold + dx\n",
     "    ynew = yold + (2*yold/xold+xold/yold)*dx\n",
@@ -855,7 +858,7 @@
     "plt.plot(x_data, y_data, 'o', label='numerical')\n",
     "\n",
     "y_analytical = [x*np.sqrt(5*x*x-1) for x in x_data]\n",
-    "plt.plot(x_analytical, y_analytical, label='analytical')\n",
+    "plt.plot(x_data, y_analytical, label='analytical')\n",
     "\n",
     "plt.legend()\n",
     "plt.xlabel(r'$x$')\n",
