--- a/tutorials/CP213-mock-soln-2020.ipynb
+++ b/tutorials/CP213-mock-soln-2020.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1### Part 2:\n",
+    "### Part 2:\n",
     "\n",
     "\\begin{align*}\n",
     "A\\frac{dh}{dt} \n",
