fixes to tutorial solutions

--- a/tutorials/tutorial3-soln.ipynb
+++ b/tutorials/tutorial3-soln.ipynb
@@ -304,7 +304,7 @@
     "\\\\\n",
     "T &= T_\\infty + (T_0-T_\\infty)e^{-t/\\tau},\n",
     "\\end{align*}\n",
-    "where $\\tau=hA/(mC)$.\n"
+    "where $\\tau=mC/(hA)$.\n"
    ]
   },
   {
@@ -884,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
