--- a/tutorials/tutorial3-soln.ipynb
+++ b/tutorials/tutorial3-soln.ipynb
@@ -93,17 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "work = 2628.830365719498 J\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "V = 250.0   # mL\n",
     "rho = 1.0   # g mL^{-1}\n",
@@ -141,9 +133,9 @@
     "  \\\\\n",
     "  &= \\eta (dW + dQ_C)\n",
     "  \\\\\n",
-    "  &= \\frac{dQ_C}{1-\\eta}\n",
+    "  &= \\frac{\\eta}{1-\\eta} dQ_C\n",
     "  \\\\\n",
-    "  &= \\frac{T_H}{T_C} {dQ_C}\n",
+    "  &= \\left(\\frac{T_H}{T_C}-1\\right) {dQ_C}\n",
     "\\end{align*}\n",
     "where we have used the energy balance around the engine $dQ_H=dW +dQ_C$.\n",
     "\n",
@@ -157,21 +149,21 @@
     "melting temperature of ice.  The heat rejected by engine is the\n",
     "enthalpy of melting of the ice.  This leads to\n",
     "\\begin{align*}\n",
-    "\\Delta W_1 &=  \\frac{T_0}{T_m} m\\Delta H\n",
+    "\\Delta W_1 &=  \\left(\\frac{T_0}{T_m}-1\\right) m\\Delta H\n",
     "\\end{align*}\n",
     "\n",
     "In the second stage, $T_H=T_0$, and $T_C$ changes with time.  The\n",
     "received by the melt water is $dQ_C=mCdT_C$.  This leads to\n",
     "\\begin{align*}\n",
     "  dW_2\n",
-    "  &= \\frac{T_0}{T_C} mC dT_C\n",
+    "  &= \\left(\\frac{T_0}{T_C}-1\\right) mC dT_C\n",
     "  \\\\\n",
     "  \\Delta W_2\n",
-    "  &= \\int_{T_m}^{T_0} \\frac{T_0}{T_C} mC dT_C\n",
+    "  &= \\int_{T_m}^{T_0} \\left(\\frac{T_0}{T_C}-1\\right) mC dT_C\n",
     "  \\\\\n",
-    "  &= \\left[T_0 mC \\ln T_C\\right]_{T_m}^{T_0} \n",
+    "  &= mC \\left[T_0 \\ln T_C - T_C\\right]_{T_m}^{T_0} \n",
     "  \\\\\n",
-    "  &= mC T_0 \\ln\\frac{T_0}{T_m}\n",
+    "  &= mC \\left[T_0 \\ln\\frac{T_0}{T_m}-(T_0-T_m)\\right]\n",
     "\\end{align*}\n",
     "The total amount of work extracted is\n",
     "\\begin{align*}\n",
@@ -183,28 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "work = 89688.05335020469 J\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DeltaH = 334.0 # J g^{-1}\n",
     "Tm = 273.15    # K\n",
     "m = 250.0 # mass of ice / g\n",
     "C = 4.2 # J g^{-1} K^{-1}\n",
     "\n",
-    "DeltaW1 = T0/Tm * m * DeltaH\n",
-    "DeltaW2 = m*C*np.log(T0/Tm)\n",
+    "DeltaW1 = (T0/Tm-1.0) * m * DeltaH\n",
+    "DeltaW2 = m*C*(T0*np.log(T0/Tm)-(T0-Tm))\n",
     "W = DeltaW1 + DeltaW2\n",
     "\n",
-    "print(f'work = {W} J')\n"
+    "print(f'work = {W} J')"
    ]
   },
   {
