fixing solution to tutorial 7

--- a/tutorials/tutorial7-soln.ipynb
+++ b/tutorials/tutorial7-soln.ipynb
@@ -644,17 +644,18 @@
     "\\\\\n",
     "f(v) - v &= \\frac{1+v}{1-v} - v \n",
     "= \\frac{1+v - (1-v)v}{1-v}\n",
-    "= \\frac{1-v^2}{1-v} = 1+v\n",
+    "= \\frac{1+v^2}{1-v}\n",
     "\\end{align*}\n",
     "We then need to integrate\n",
     "\\begin{align*}\n",
-    "\\frac{dv}{1+v} &= \\frac{dx}{x}\n",
+    "\\frac{1-v}{1+v^2}dv &= \\frac{dx}{x}\n",
     "\\\\\n",
-    "\\ln |1+v| &= \\ln |x| + C\n",
+    "\\arctan v - \\frac{1}{2}\\ln |1+v^2| &= \\ln |x| + C\n",
     "\\\\\n",
-    "\\ln \\left|1+\\frac{y(x)}{x}\\right| &= \\ln|x| + C\n",
-    "\\\\\n",
-    "\\left|1+\\frac{y(x)}{x}\\right| &= |x| e^C\n",
+    "\\arctan\\frac{y(x)}{x}\n",
+    " - \\frac{1}{2}\\ln \\left(1+\\left(\\frac{y(x)}{x}\\right)^2\\right) &= \\ln|x| + C\n",
+    "%\\\\\n",
+    "%\\left|1+\\frac{y(x)}{x}\\right| &= |x| e^C\n",
     "\\end{align*}"
    ]
   },
