--- a/tutorials/tutorialS2_1-soln.ipynb
+++ b/tutorials/tutorialS2_1-soln.ipynb
@@ -178,7 +178,7 @@
     "                &=  \\left[ -A\\frac{\\omega^2}{\\alpha^2}\\sin(\\omega x/\\alpha) - B\\frac{\\omega^2}{\\alpha^2} \\cos(\\omega x/\\alpha) \\right]\n",
     "                    [C\\sin(\\omega t)+D\\cos(\\omega t)]\n",
     "                \\\\\n",
-    "                &=  -\\frac{\\omega^2}{\\alpha^2}\\left[ A\\sin(\\omega x/\\alpha) B \\cos(\\omega x/\\alpha)\\right]\n",
+    "                &=  -\\frac{\\omega^2}{\\alpha^2}\\left[ A\\sin(\\omega x/\\alpha) + B \\cos(\\omega x/\\alpha)\\right]\n",
     "                    [C\\sin(\\omega t)+D\\cos(\\omega t)]\n",
     "                \\\\\n",
     "                &= -\\frac{\\omega^2}{\\alpha^2}u(x,t)\n",
