adding solutions for tutorial 2

--- a/tutorials/tutorialS2_3.ipynb
+++ b/tutorials/tutorialS2_3.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "Find all points on the surface $xy−z^2+1=0$ that are closest to the origin. \n",
     "\n",
-    "Answer: $(0,0,1)$, $(0,0,1)$, and $(0,0,−1)$"
+    "Answer: $(0,0,1)$ and $(0,0,−1)$"
    ]
   },
   {
