minor fix to tutorial

--- a/tutorials/tutorialS2_5.ipynb
+++ b/tutorials/tutorialS2_5.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "Consider a laminate  bounded by $x^2+y^2=1\\,\\mathrm{m}$ with density function $\\rho(x,y) = \\sqrt{x^2+y^2}$, in units of $\\mathrm{g\\,m^{-2}}$.\n",
+    "Consider a laminate  bounded by $x^2+y^2=1\\,\\mathrm{m}^2$ with density function $\\rho(x,y) = \\sqrt{x^2+y^2}$, in units of $\\mathrm{g\\,m^{-2}}$.\n",
     "1. Determine the mass of the laminate\n",
     "2. Determine the moment of inertia about the origin.\n",
     "\n"
