--- a/tutorials/tutorialS2_5.ipynb
+++ b/tutorials/tutorialS2_5.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "For the remaining questions, please refer to the formula sheet  which can be found under the learning materials on the class site for the Taylor series.\n",
     "\n",
-    "Differentiate the Maclaurin series of $\\sin{x}$ and show that the result is equivalent to the Taylor series for $\\cos{x}$."
+    "Differentiate the Maclaurin series of $\\sin{x}$ and show that the result is equivalent to the Maclaurin series for $\\cos{x}$."
    ]
   },
   {
