--- a/tutorials/tutorialS2_6.ipynb
+++ b/tutorials/tutorialS2_6.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "## Question 4\n",
-    "A company specialising in $350 \\ \\rm{ml}$ cans for soft-drinks wishes to explore whether alternative dimensions to reduce material usage. Determine the dimensions of cans that would minimise material usage, stating any assumptions you have made. Is there a difference between the calculated dimensions and the current standard?"
+    "A company specialising in $350 \\ \\rm{ml}$ cans for soft-drinks wishes to explore whether alternative dimensions to reduce material usage. Determine the dimensions of cans that would minimise material usage, stating any assumptions you have made."
    ]
   },
   {
