minor error update

--- a/tutorials/tutorialS2_4-soln.ipynb
+++ b/tutorials/tutorialS2_4-soln.ipynb
@@ -104,7 +104,7 @@
     "### Part 3\n",
     "\n",
     "\\begin{align*}\n",
-    "    P\\left(Y\\leq\\frac{X}{2}\\right) &= \\int_0^\\frac{1}{2} \\int_0^\\frac{x}{2} \\left(\\frac{3}{2}y^2 + x\\right)\\, dydx\\\\\n",
+    "    P\\left(Y\\leq\\frac{X}{2}\\right) &= \\int_0^1 \\int_0^\\frac{x}{2} \\left(\\frac{3}{2}y^2 + x\\right)\\, dydx\\\\\n",
     "    &= \\int_0^1 \\left(\\frac{y^3}{2} + xy\\right) \\biggl|_{y=0}^{y=\\frac{x}{2}} \\, dx\\\\\n",
     "    &= \\int_0^1 \\left(\\frac{x^3}{16} + \\frac{x^2}{2}\\right) \\, dx \\\\\n",
     "    &= \\left(\\frac{x^4}{64}+\\frac{x^3}{6}\\right) \\biggl|_0^1 \\\\\n",
