minor update to tutorial 8

--- a/tutorials/tutorialS2_8.ipynb
+++ b/tutorials/tutorialS2_8.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Question 3\n",
     "\n",
-    "Determine the eigenvalues and eigenvectors of the following matrices and then verify using some python code.\n",
+    "Determine the eigenvalues and eigenvectors of the following matrices and then verify using some python (again, do search the internet for some code).\n",
     "\n",
     "1. $\\boldsymbol{A} =\\begin{pmatrix} 5 & 4\\\\ 1 & 2 \\end{pmatrix}$\n",
     "2. $\\boldsymbol{B} =\\begin{pmatrix}-0.25 & 0.5\\\\0.25&-0.5\\end{pmatrix}$ \n",
